--- a/index.html
+++ b/index.html
@@ -4975,7 +4975,7 @@
                                                                                     align-items: center;
                                                                                     gap: 16px;
                                                                                     padding: 20px 24px;
-                                                                                    background: white;
+                                                                                    background: #ffffff;
                                                                                     border: 2px solid var(--border-color);
                                                                                     border-radius: 12px;
                                                                                     cursor: pointer;
@@ -4998,7 +4998,7 @@
                                                                                     height: 28px;
                                                                                     border: 3px solid var(--border-color);
                                                                                     border-radius: 50%;
-                                                                                    background: white;
+                                                                                    background: #ffffff;
                                                                                     display: flex;
                                                                                     align-items: center;
                                                                                     justify-content: center;
@@ -5015,14 +5015,14 @@
                                                                                     content: '';
                                                                                     width: 12px;
                                                                                     height: 12px;
-                                                                                    background: white;
+                                                                                    background: #ffffff;
                                                                                     border-radius: 50%;
                                                                                 }
 
                                                                                 .schedule-pref-text {
                                                                                     font-size: 18px;
                                                                                     font-weight: 600;
-                                                                                    color: var(--text-color);
+                                                                                    color: #1f2937;
                                                                                 }
 
                                                                                 /* Old schedule styles - keep for backwards compatibility */
@@ -5364,7 +5364,7 @@
                                                                                     align-items: center;
                                                                                     gap: 16px;
                                                                                     padding: 20px 24px;
-                                                                                    background: white;
+                                                                                    background: #ffffff;
                                                                                     border: 2px solid var(--border-color);
                                                                                     border-radius: 12px;
                                                                                     cursor: pointer;
@@ -5387,7 +5387,7 @@
                                                                                     height: 28px;
                                                                                     border: 3px solid var(--border-color);
                                                                                     border-radius: 50%;
-                                                                                    background: white;
+                                                                                    background: #ffffff;
                                                                                     display: flex;
                                                                                     align-items: center;
                                                                                     justify-content: center;
@@ -5404,7 +5404,7 @@
                                                                                     content: '';
                                                                                     width: 12px;
                                                                                     height: 12px;
-                                                                                    background: white;
+                                                                                    background: #ffffff;
                                                                                     border-radius: 50%;
                                                                                 }
 
@@ -5423,7 +5423,7 @@
                                                                                 .subject-title {
                                                                                     font-size: 16px;
                                                                                     font-weight: 500;
-                                                                                    color: var(--text-color);
+                                                                                    color: #1f2937;
                                                                                 }
 
                                                                                 /* Year Level Options */
@@ -5438,7 +5438,7 @@
                                                                                     align-items: center;
                                                                                     gap: 16px;
                                                                                     padding: 20px 24px;
-                                                                                    background: white;
+                                                                                    background: #ffffff;
                                                                                     border: 2px solid var(--border-color);
                                                                                     border-radius: 12px;
                                                                                     cursor: pointer;
@@ -5465,14 +5465,14 @@
                                                                                     content: '';
                                                                                     width: 12px;
                                                                                     height: 12px;
-                                                                                    background: white;
+                                                                                    background: #ffffff;
                                                                                     border-radius: 50%;
                                                                                 }
 
                                                                                 .year-level-text {
                                                                                     font-size: 18px;
                                                                                     font-weight: 600;
-                                                                                    color: var(--text-color);
+                                                                                    color: #1f2937;
                                                                                 }
 
                                                                                 .trim-confirm-container {
@@ -7587,15 +7587,16 @@
                                                                                                                 <div class="schedule-pref-options-container">
                                                                                                                     <div class="schedule-pref-option" data-day="mth">
                                                                                                                         <div class="schedule-pref-radio"></div>
-                                                                                                                        <div class="schedule-pref-text">M/TH</div>
+                                                                                                                        <div class="schedule-pref-text">M/TH (Monday/Thursday)</div>
                                                                                                                     </div>
                                                                                                                     <div class="schedule-pref-option" data-day="tf">
                                                                                                                         <div class="schedule-pref-radio"></div>
-                                                                                                                        <div class="schedule-pref-text">T/F</div>
+                                                                                                                        <div class="schedule-pref-text">T/F (Tuesday/Friday)</div>
                                                                                                                     </div>
                                                                                                                     <div class="schedule-pref-option" data-day="ws">
                                                                                                                         <div class="schedule-pref-radio"></div>
-                                                                                                                        <div class="schedule-pref-text">W/S</div>
+                                                                                                                        <div class="schedule-pref-text">W/S (Wednesday/Saturday)</div>
+                                                                                                                        
                                                                                                                     </div>
                                                                                                                 </div>
                                                                                                             </div>
