--- a/index.html
+++ b/index.html
@@ -7516,7 +7516,9 @@
 
                                                                                                     <hr class="enrollment-divider">
 
-                                                                                                    
+                                                                                                    <!-- Third Row -->
+                                                                                                    <div class="enrollment-info-row">
+                                                                                                        <div class="enrollment-field enrollment-field-empty"></div>
                                                                                                         <div class="enrollment-field">
                                                                                                             <label><i class="fas fa-layer-group"></i> Curriculum Year Level</label>
                                                                                                             <span class="field-value">2nd</span>
