--- a/index.html
+++ b/index.html
@@ -7484,10 +7484,8 @@
                                                                                                             <span class="field-value">2nd Trimester</span>
                                                                                                         </div>
                                                                                                         <div class="enrollment-field">
-                                                                                                            <label><i class="fas fa-user-graduate"></i> Scholastic Status</label>
-                                                                                                            <span class="field-value status-regular">Regular</span>
-                                                                                                            <span class="field-secondary">Irregular</span>
-                                                                                                            <span class="field-secondary">Etc...</span>
+                                                                                                            <label><i class="fas fa-layer-group"></i> Curriculum Year Level</label>
+                                                                                                            <span class="field-value">2nd</span>
                                                                                                         </div>
                                                                                                         <div class="enrollment-field">
                                                                                                             <label><i class="fas fa-door-open"></i> Entry Classification</label>
@@ -7519,10 +7517,7 @@
                                                                                                     <!-- Third Row -->
                                                                                                     <div class="enrollment-info-row">
                                                                                                         <div class="enrollment-field enrollment-field-empty"></div>
-                                                                                                        <div class="enrollment-field">
-                                                                                                            <label><i class="fas fa-layer-group"></i> Curriculum Year Level</label>
-                                                                                                            <span class="field-value">2nd</span>
-                                                                                                        </div>
+                                                                                                        <div class="enrollment-field enrollment-field-empty"></div>
                                                                                                         <div class="enrollment-field enrollment-field-empty"></div>
                                                                                                         
                                                                                                         <!-- Enrollment Date/Time Box - 4th column position -->
@@ -7541,7 +7536,7 @@
                                                                                                     <hr class="enrollment-divider">
 
                                                                                                     <!-- Double HR -->
-                                                                                                    <hr class="enrollment-divider">
+                                                                                                    
                                                                                                     <hr class="enrollment-divider enrollment-divider-double">
 
                                                                                                     <!-- Selection Sections Container (Side by Side) -->
