--- a/index.html
+++ b/index.html
@@ -7484,8 +7484,10 @@
                                                                                                             <span class="field-value">2nd Trimester</span>
                                                                                                         </div>
                                                                                                         <div class="enrollment-field">
-                                                                                                            <label><i class="fas fa-layer-group"></i> Curriculum Year Level</label>
-                                                                                                            <span class="field-value">2nd</span>
+                                                                                                            <label><i class="fas fa-user-graduate"></i> Scholastic Status</label>
+                                                                                                            <span class="field-value status-regular">Regular</span>
+                                                                                                            <span class="field-secondary">Irregular</span>
+                                                                                                            <span class="field-secondary">Etc...</span>
                                                                                                         </div>
                                                                                                         <div class="enrollment-field">
                                                                                                             <label><i class="fas fa-door-open"></i> Entry Classification</label>
@@ -7506,8 +7508,8 @@
                                                                                                             <span class="field-value">BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</span>
                                                                                                         </div>
                                                                                                         <div class="enrollment-field">
-                                                                                                            <label><i class="fas fa-award"></i> Major</label>
-                                                                                                            <span class="field-value">Cisco Networking</span>
+                                                                                                            <label><i class="fas fa-layer-group"></i> Curriculum Year Level</label>
+                                                                                                            <span class="field-value">2nd</span>
                                                                                                         </div>
                                                                                                         <div class="enrollment-field enrollment-field-empty"></div>
                                                                                                     </div>
@@ -7516,7 +7518,10 @@
 
                                                                                                     <!-- Third Row -->
                                                                                                     <div class="enrollment-info-row">
-                                                                                                        <div class="enrollment-field enrollment-field-empty"></div>
+                                                                                                        <div class="enrollment-field">
+                                                                                                            <label><i class="fas fa-award"></i> Major</label>
+                                                                                                            <span class="field-value">Cisco Networking</span>
+                                                                                                        </div>
                                                                                                         <div class="enrollment-field enrollment-field-empty"></div>
                                                                                                         <div class="enrollment-field enrollment-field-empty"></div>
                                                                                                         
@@ -7536,7 +7541,7 @@
                                                                                                     <hr class="enrollment-divider">
 
                                                                                                     <!-- Double HR -->
-                                                                                                    
+                                                                                                    <hr class="enrollment-divider">
                                                                                                     <hr class="enrollment-divider enrollment-divider-double">
 
                                                                                                     <!-- Selection Sections Container (Side by Side) -->
