Fix duplicate enrollment-divider in index.html

--- a/index.html
+++ b/index.html
@@ -7543,6 +7543,7 @@
                                                                                                     <!-- Double HR -->
                                                                                                   
                                                                                                     <hr class="enrollment-divider enrollment-divider-double">
+                                                                                                  <hr class="enrollment-divider enrollment-divider-double">
 
                                                                                                     <!-- Selection Sections Container (Side by Side) -->
                                                                                                     <div class="selection-sections-wrapper">
