Revise comments in course section of index.html
Updated comments for clarity in course section.

--- a/index.html
+++ b/index.html
@@ -7552,64 +7552,40 @@
                                                                                                     <div class="course-section">
                                                                                                         <h3 class="course-section-header">Course</h3>
                                                                                                         
-                                                                                                        <!-- Field Row 1: Code -->
+                                                                                                        <!-- Row 1: Code, Title, Type, Units -->
                                                                                                         <div class="course-info-row">
                                                                                                             <div class="course-field">
                                                                                                                 <label class="field-label"><i class="fas fa-barcode"></i> Code</label>
                                                                                                                 <span class="field-value">SDF04</span>
                                                                                                             </div>
-                                                                                                        </div>
-
-                                                                                                        <!-- Field Row 2: Title -->
-                                                                                                        <div class="course-info-row">
                                                                                                             <div class="course-field">
                                                                                                                 <label class="field-label"><i class="fas fa-book"></i> Title</label>
                                                                                                                 <span class="field-value">Database Management System</span>
                                                                                                             </div>
-                                                                                                        </div>
-
-                                                                                                        <!-- Field Row 3: Type -->
-                                                                                                        <div class="course-info-row">
                                                                                                             <div class="course-field">
                                                                                                                 <label class="field-label"><i class="fas fa-tag"></i> Type</label>
                                                                                                                 <span class="field-value">Major</span>
                                                                                                             </div>
-                                                                                                        </div>
-
-                                                                                                        <!-- Field Row 4: Units -->
-                                                                                                        <div class="course-info-row">
                                                                                                             <div class="course-field">
                                                                                                                 <label class="field-label"><i class="fas fa-calculator"></i> Units</label>
                                                                                                                 <span class="field-value">3</span>
                                                                                                             </div>
                                                                                                         </div>
 
-                                                                                                        <!-- Field Row 5: Time -->
+                                                                                                        <!-- Row 2: Time, Day, Program, Available Slot(s) -->
                                                                                                         <div class="course-info-row">
                                                                                                             <div class="course-field">
                                                                                                                 <label class="field-label"><i class="fas fa-clock"></i> Time</label>
                                                                                                                 <span class="field-value">7:30 AM - 10:30 AM</span>
                                                                                                             </div>
-                                                                                                        </div>
-
-                                                                                                        <!-- Field Row 6: Day -->
-                                                                                                        <div class="course-info-row">
                                                                                                             <div class="course-field">
                                                                                                                 <label class="field-label"><i class="fas fa-calendar-day"></i> Day</label>
                                                                                                                 <span class="field-value">M/TH</span>
                                                                                                             </div>
-                                                                                                        </div>
-
-                                                                                                        <!-- Field Row 7: Program -->
-                                                                                                        <div class="course-info-row">
                                                                                                             <div class="course-field">
                                                                                                                 <label class="field-label"><i class="fas fa-graduation-cap"></i> Program</label>
                                                                                                                 <span class="field-value">BSIT</span>
                                                                                                             </div>
-                                                                                                        </div>
-
-                                                                                                        <!-- Field Row 8: Available Slot(s) -->
-                                                                                                        <div class="course-info-row">
                                                                                                             <div class="course-field">
                                                                                                                 <label class="field-label"><i class="fas fa-users"></i> Available Slot(s)</label>
                                                                                                                 <span class="field-value">25/40</span>
